# Continuous-Peak-Fit

./: .buildinfo.bak  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Calibration.immask  CeO2_Pil207_E30_2Nov2016_001.tif  CeO2_calibration.mac  Complex.immask  DevelopmentTimeLine.txt  Diffraction.immask  FPF_DioptasFunctions.py  FPF_GSASIIFunctions.py  FPF_MakeOutput.py  FPF_MedFunctions.py  FPF_PeakFourierFunctions.py  FPF_Plot85Functions.py  FPF_TestCases.py  FPF_WriteMultiFit.py  FPF_WritePolydefixED.py  FPF_XRD_FitPattern.py  FPF_XRD_FitSubpattern.py  ImageMetaData.py  LICENSE.txt  MainWindow.py  Mca.py  Med.py  Output.txt  Output1.fit  Output_Widget.py  Output_Widget.ui  Peak_Widget.py  Peak_Widget.ui  Pipfile  README.md  Range_Widget.py  TEP - CPF Installation (Windows).ipynb  TEP_troubleshooting.py  X-rayFileStructures  diff_inputs.diff  (+19 more)
.doctrees/: algorithm.doctree  api.doctree  environment.pickle  index.doctree  input file.doctree  installation.doctree  subpattern structure.doctree  whatsnew.doctree
.github/workflows/: build-and-test.yml  delete-preview-docs.yml  documentation.yml  python-package.yml
Example1-Fe/: BCC1_2GPa_10s_001.exp  BCC1_2GPa_10s_001_00001.fit  BCC1_2GPa_10s_001_00001.json  BCC1_2GPa_10s_001_00001.tif  BCC1_2GPa_10s_001_00001_Fe-BCC200.sav  BCC1_2GPa_10s_001_00001_Fe-BCC211.sav  BCC1_2GPa_10s_001_00001_Fe-BCC220.sav  BCC1_2GPa_10s_001_00001_Fe-BCC310.sav  BCC1_2GPa_10s_001_00001_Other000_Fe-BCC110.sav  BCC1_2GPa_10s_001_00002.fit  BCC1_2GPa_10s_001_00002.json  BCC1_2GPa_10s_001_00002.tif  BCC1_2GPa_10s_001_00003.fit  BCC1_2GPa_10s_001_00003.json  BCC1_2GPa_10s_001_00003.tif  BCC1_2GPa_10s_001_00004.fit  BCC1_2GPa_10s_001_00004.json  BCC1_2GPa_10s_001_00004.tif  BCC1_2GPa_10s_001_00005.fit  BCC1_2GPa_10s_001_00005.json  BCC1_2GPa_10s_001_00005.tif  BCC1_2GPa_10s_001_00006.fit  BCC1_2GPa_10s_001_00006.json  BCC1_2GPa_10s_001_00006.tif  BCC1_2GPa_10s_001_00007.fit  BCC1_2GPa_10s_001_00007.json  BCC1_2GPa_10s_001_00007.tif  BCC1_2GPa_10s_001_00008.fit  BCC1_2GPa_10s_001_00008.json  BCC1_2GPa_10s_001_00008.tif  BCC1_2GPa_10s_001_00009.fit  BCC1_2GPa_10s_001_00009.json  BCC1_2GPa_10s_001_00009.tif  BCC1_2GPa_10s_001_00010.fit  BCC1_2GPa_10s_001_00010.json  BCC1_2GPa_10s_001_00010.tif  BCC1_Dioptas_EmptyRanges_input.py  BCC1_Dioptas_EqualParams_input.py  BCC1_Dioptas_MultiPeak_input.py  BCC1_Dioptas_SeriesFunctions_input.py  (+19 more)
Example2-MgO/: COSI_021_0001.med  COSI_022_0000.med  COSI_022_0001.med  COSI_022_0002.med  COSI_022_0003.med  COSI_022_0004.med  COSI_022_0005.med  COSI_022_0006.med  COSI_022_0007.med  COSI_022_0008.med  COSI_022_0009.med  COSI_022_0010.med  COSI_022_0011.med  COSI_022_0012.med  COSI_022_0013.med  COSI_022_0014.med  COSI_022_0015.med  COSI_022_0016.med  COSI_022_0017.med  COSI_022_0018.med  COSI_022_0019.med  COSI_022_0020.med  COSI_022_0021.med  COSI_022_0022.med  COSI_022_0023.med  COSI_022_0024.med  COSI_022_0025.med  COSI_022_0026.med  COSI_022_0027.med  COSI_022_0028.med  COSI_022_0029.med  COSI_022_0030.med  COSI_022_0031.med  COSI_022_0032.med  COSI_022_0033.med  COSI_022_0034.med  COSI_022_0035.med  COSI_022_0036.med  COSI_022_0037.med  COSI_022_0038.med  (+42 more)
Widgets/: MainWindow.py  MainWindow.ui  Main_Widget.py  Main_Widget.ui  Output_Widget.py  Output_Widget.ui  Peak_Widget.py  Peak_Widget.ui  Range_Widget.py  Range_Widget.ui  __init__.py  matplotlib_auto.py  matplotlib_inline.py  matplotlib_qt.py
cpf/: BrightSpots.py  Cascade.py  Cascade_Test.py  Cosmics.py  Data_class.py  DioptasFunctions.py  GSASIIFunctions.py  IO_functions.py  ImageMetaData.py  Mca.py  Med.py  MedFunctions.py  PeakFunctions.py  Plot85Functions.py  PostProcessOutputs.py  Settings.py  WriteCoefficientTable.py  WriteDifferentialStrain.py  WriteMultiFit.py  WritePolydefix.py  WritePolydefixED.py  XRD_FitPattern.py  XRD_FitSubpattern.py  __init__.py  data_preprocess.py  fitsubpattern_chunks.py  h5_functions.py  histograms.py  lmfit_model.py  peak_functions.py  pretend_classes.py  series_functions.py  settings.py
cpf/input_types/: DioptasFunctions.py  ESRFlvpFunctions.py  GSASIIFunctions.py  Mca.py  Med.py  MedFunctions.py  XYFunctions.py  _AngleDispersive_common.py  _Masks.py  _Plot_AngleDispersive.py  __init__.py  med_detectors.py  raster_axes.py
cpf/output_formatters/: WriteCoefficientTable.py  WriteDifferentialStrain.py  WriteFitMovie.py  WriteMultiFit.py  WritePolydefix.py  WritePolydefixED.py  __init__.py  convert_fit_to_crystallographic.py
docker/: Dockerfile  dockerfile  dockerfile_base  dockerfile_cpf
docs/: Makefile
docs/source/: algorithm.rst  bounds.rst  conf.py  cpf.bib  example function tests.rst  index.rst  input file h5 syntax.rst  input file short.rst  installation.rst  subpattern structure.rst
preview/add-crystallographic-tests/: input file short.html  running cpf.html  x-ray diffraction.html
preview/add-sphinx-documentation-workflow/: .buildinfo  api.html  example function tests.html
preview/integrate-gui/: genindex.html  introduction.html  objects.inv  py-modindex.html  search.html
preview/merge-master-to-dev/: algorithm.html  api.html  bounds.html  example function tests.html  genindex.html  index.html  input file h5 syntax.html  input file short.html  input file.html  installation.html  introduction.html  objects.inv  output_file_structure.html  running cpf.html  search.html  searchindex.js  subpattern structure.html  whatsnew.html  x-ray diffraction.html
preview/use-agg-backend-in-tests/: algorithm.html  bounds.html  index.html  installation.html  subpattern structure.html  (+1 more)
tests/: test_FitSubPattern.py  test_ImagePreprocessing.py  test_KnownInputToOutputs.py  test_XRD_FitPattern.py
(+87 files in other folders)
