[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
name = "continuous-peak-fit"
version = "0.0.1.dev1"
description = "Fits azimuth/time dependency of peaks with Fourier Series descriptions."
readme = "README.md"
keywords = [
    "",
]
license.file = "LICENSE.txt"
authors = [
    { name = "Simon Hunt", email = "simon.hunt@manchester.ac.uk" },
    { name = "Danielle Fenech" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",       # pip install works for 3.9.19
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",      # pip install works for 3.11.9
]
dependencies = [
    "fabio",
    "h5py",
    "hdf5plugin",
    "imaged11",
    "lmfit",
    "matplotlib",
    "moviepy",
    "numpy<2",       # Locked to <2 to give dependencies time to catch up
    "opencv-python",
    "pandas",
    "pathos",
    "pillow",
    "pycairo",
    "pyfai",
    "pyopencl",      # NOTE: ImageD11 mentions using pyopengl
    "scipy",
]
optional-dependencies.dev = [
    "bump2version", # For version control
    "ipykernel",    # For Jupyter Notebook interactive development
    "pre-commit",   # For running code checks with
    "pytest",       # For running unit tests on code
]
urls.Repository = "https://github.com/ExperimentalMineralPhysics/Continuous-Peak-Fit"

[tool.setuptools.packages.find]
where = [ "src" ]
namespaces = false

[tool.ruff]
lint.select = [
    "I", # isort implementation
]

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = true
max_supported_python = "3.11" # Latest version in security stage
